clusters/KC-Int/deployments/default/gitea/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gitea-ssh
spec:
    selector:
        app: gitea
    type: LoadBalancer
    loadBalancerIP: 172.16.2.15
    ports:
        - name: ssh
          port: 22
---
apiVersion: v1
kind: Service
metadata:
    name: gitea-web
spec:
    selector:
        app: gitea
    ports:
        - name: http
          port: 3000
