clusters/KC-Int/deployments/default/gitea/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: gitea
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:38h3eK+/uxYvA2UY5f1wayp8nc3voi4=,iv:P6UpxXSfM3unfzqHunkt9l6qgeNCZxxGJWV3irIuk+0=,tag:+XJLtaZFWOPE/yF8QOjdfA==,type:str]
          kind: Rule
          services:
            - name: gitea-web
              port: 3000
        - match: ENC[AES256_GCM,data:ZT11fxzy17PYctgKOlE9Dm48oA==,iv:jN5LnFDz/atIIsPBRh9OqZRwphz/z0mZdpIg6FF5c6Y=,tag:Cbc3efaaUps1ZKwXXSIUXw==,type:str]
          kind: Rule
          services:
            - name: gitea-web
              port: 3000
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsZW5Va1lDdVhPTHdCTVd3
[...]
            9+bNeeVIFHGujN+oOkYBt8FXJGen8GGScB07k9Rft5AjCxIsjK8vuw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T16:20:49Z"
    mac: ENC[AES256_GCM,data:ZW2vOoJhy6iaq9J34ZtxFFyo7qspRORMgJmc+5Isb42VFYS8BJvN9sW9P6or/pMNIUyp93QMBbGvzpe5HtVulm+cIZuMV7AyvJqjAKOsxqi/Q43Kp30LcJoO9vxW4M7XwoY5dznexwlinYMLHFkBkSPgNePhw5l/3gTTmCe1O2Q=,iv:jABDnoAsb9xda9JiZBac7WUqfcJ45KbfdjEkzMeuXJ0=,tag:JSzibv03oR4cfBQ9CNKgqQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
